# cross-market-gamma-engine

./: README.md
cpp/: CMakeLists.txt
cpp/benchmarks/: README.md
cpp/include/: execution.hpp  lockfree.hpp  pricing.hpp
cpp/src/: execution.cpp  main.cpp  pricing.cpp
python/validation/: surface_check.py
rust/: Cargo.toml
rust/src/: auth.rs  connectivity.rs  deribit.rs  fair_pricing.rs  gex.rs  greeks.rs  iv.rs  main.rs  replay.rs  signal.rs  types.rs
schemas/: bbo.json  greek_snapshot.json  instrument.json  signal_state.json
testdata/: options_sample.csv  underlying_sample.csv
