[package]
name = "cross-market-gamma-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2"
chrono = "0.4"
implied-vol = "1"
thiserror = "2"
